--- a/index.css
+++ b/index.css
@@ -1,185 +1,30 @@
 * {
   box-sizing: border-box;
 }
-
 html {
   font-family: monospace;
 }
 body {
   margin: 0;
-  background: url(./bak.svg) no-repeat center center fixed;
+  background: url(bak.svg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
 }
-
-/* .banner{
-    min-height: 600px;
-    margin: 0;
-    background: url(./undraw_counting_stars_rrnl.svg) no-repeat center center; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-} */
-
 nav ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
   overflow: hidden;
-  background-color: #ffffff;
-  /* position: fixed; */
+  background-color: #fff;
   top: 0;
   width: 100%;
   left: 0;
 }
-
 nav li {
   float: left;
 }
-
-.banner-text h3 {
-  font-size: 34px;
-  text-align: center;
-  color: #0048cd;
-  line-height: 0.5;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-}
-
-.banner-text p {
-  text-align: center;
-  font-size: 20px;
-}
-
-.box-title {
-  font-size: 44px;
-  text-align: center;
-  color: #0048cd;
-  /* line-height: 1; */
-  /* text-overflow: ellipsis; */
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif; */
-}
-
-.responsive-img {
-  width: 90%;
-  max-width: 400px;
-  height: auto;
-  text-align: center;
-  /* margin: 5px auto; */
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  /* padding: 10px; */
-}
-
-.website-box {
-  border: #3f3d56 solid 2px;
-  align-items: center;
-  max-width: 500px;
-  margin: 10px auto;
-  padding: 0px 5px;
-  /* margin-left: 5px; */
-  /* margin-right: 5px; */
-  color: #3f3d56;
-  box-shadow: 0.5em 0.5em #6c63ff;
-  -webkit-transition: all 0.25s ease-in-out;
-  transition: all 0.25s ease-in-out;
-}
-
-.social-box{
-  border: #3f3d56 solid 2px;
-  align-items: center;
-  max-width: 200px;
-  margin: 10px auto;
-  padding: 0px 5px;
-  /* margin-left: 5px; */
-  /* margin-right: 5px; */
-  color: #3f3d56;
-  /* box-shadow: 0.5em 0.5em #6c63ff; */
-}
-
-.website-box-container,
-.banner-container {
-  padding: 2px 15px;
-}
-
-.website-box:hover {
-  box-shadow: 0.25em 0.25em #000;
-  -webkit-transform: translate(0.25em, 0.25em);
-  transform: translate(0.25em, 0.25em);
-}
-
-.website-box a {
-  color: #3f3d56 !important;
-}
-
-.website-box h2 {
-  text-align: center;
-  text-transform: uppercase;
-}
-
-.item-img {
-  max-width: 100px;
-  vertical-align: middle !important;
-}
-
-.link {
-  color: #6c63ff !important;
-}
-
-/* .website-box::after {
-  top: 0;
-  left: 0;
-}
-
-.website-box:hover::before {
-  border-top-color: #0048cd;
-  border-right-color: #0048cd;
-}
-
-.website-box:hover::after {
-  border-bottom-color: red;
-  border-left-color: red;
-  transition: border-color 0s ease-out 0.5s, height 0.25s ease-out,
-    width 0.25s ease-out 0.25s;
-} */
-
-/* .website-box:hover {
-  transform: translateY(-5px);
-} */
-
-/* Create two unequal columns that floats next to each other */
-/* Create two unequal columns that floats next to each other */
-.column {
-  float: left;
-  padding: 10px;
-  /* height: 300px; Should be removed. Only for demonstration */
-}
-
-.left {
-  width: 25%;
-}
-
-.right {
-  width: 75%;
-}
-
-/* Clear floats after the columns */
-.row:after {
-  content: "";
-  display: table;
-  clear: both;
-  clear: both;
-}
-
-@media screen and (max-width: 600px) {
-  .column {
-    width: 100%;
-  }
-}
-
 nav li a {
   display: block;
   color: #0048cd;
@@ -187,13 +32,163 @@ nav li a {
   padding: 14px 16px;
   text-decoration: none;
 }
-
 nav li a:hover:not(.active) {
   background-color: #0048cd;
-  color: white;
+  color: #fff;
 }
-
 nav li a.active {
   background-color: #0048cd;
-  color: white;
+  color: #fff;
+}
+.banner-text h3 {
+  font-size: 34px;
+  text-align: center;
+  color: #0048cd;
+  line-height: 0.5;
+}
+.banner-text p {
+  text-align: center;
+  font-size: 20px;
+}
+.box-title {
+  font-size: 44px;
+  text-align: center;
+  color: #0048cd;
+}
+.responsive-img {
+  width: 90%;
+  max-width: 400px;
+  height: auto;
+  text-align: center;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+.website-box {
+  border: #3f3d56 solid 2px;
+  align-items: center;
+  max-width: 500px;
+  margin: 10px auto;
+  padding: 0 5px;
+  color: #3f3d56;
+  box-shadow: 0.5em 0.5em #6c63ff;
+  -webkit-transition: all 0.25s ease-in-out;
+  transition: all 0.25s ease-in-out;
+}
+.social-box-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.social-box {
+  border: #3f3d56 solid 2px;
+  align-items: center;
+  max-width: 70px;
+  margin: 10px;
+  padding: 0 5px;
+  color: #3f3d56;
+}
+.facebook {
+  box-shadow: -0.5em 0.5em #4267b2;
+}
+.facebook i {
+  color: #0048cd !important;
+}
+.twitter {
+  box-shadow: -0.5em 0.5em #1da1f2;
+}
+.twitter i {
+  color: #0048cd !important;
+}
+.instagram {
+  box-shadow: -0.5em 0.5em #e4405f;
+}
+.instagram i {
+  color: #0048cd !important;
+}
+.github {
+  box-shadow: -0.5em 0.5em #34465d;
+}
+.github i {
+  color: #0048cd !important;
+}
+.social-icon {
+  vertical-align: middle;
+  text-align: center;
+  padding: 20px;
+}
+.social-icon > i {
+  font-size: 1.5em;
+}
+.banner-container,
+.website-box-container {
+  padding: 2px 15px;
+}
+.website-box:hover {
+  box-shadow: 0.25em 0.25em #000;
+  -webkit-transform: translate(0.25em, 0.25em);
+  transform: translate(0.25em, 0.25em);
+}
+.website-box a {
+  color: #3f3d56 !important;
+}
+.website-box h2 {
+  text-align: center;
+  text-transform: uppercase;
+}
+.website-box h1 {
+  line-height: 30px;
+  text-align: center;
+  color: #0048cd;
+  font-size: 2.5rem;
+}
+.item-img {
+  max-width: 100px;
+  vertical-align: middle !important;
+  margin-top: 30px;
+}
+.link {
+  color: #6c63ff !important;
+}
+.navicon {
+  vertical-align: middle;
+  max-width: 18px;
+  margin-bottom: 0.1em;
+}
+.contact {
+  padding-bottom: 1.2em;
+  vertical-align: middle;
+}
+.column {
+  float: left;
+  padding: 10px;
+}
+.left {
+  width: 25%;
+}
+.right {
+  width: 75%;
+}
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+  clear: both;
+}
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
+}
+.footer {
+  margin-top: 20px;
+  width: 100%;
+  background-color: #0048cd;
+  color: #fff;
+  padding: 2rem;
+  text-align: center;
+}
+
+.footer a {
+  color: #fff !important;
 }
